@@ -1,18 +1,15 @@
 package com.ecomerceApi.Priscila.model;
-
 import lombok.Getter;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-
-import static java.util.Arrays.stream;
-import static org.hibernate.Hibernate.map;
+import java.util.stream.Collectors;
 
 @Getter
+@RequiredArgsConstructor
 public enum Role {
-    USER(Collections.emptySet()),
     CUSTOMER(Set.of(
 
             Permission.CUSTOMER_READ,
@@ -35,18 +32,15 @@ public enum Role {
     ));
 
 
-    private final Set<Permission> permissions; // to no have duplications Set is better
-
-    Role(Set<Permission> permissions) {
-        this.permissions = permissions;
-    }
+    private final Set<Permission> permissions; // Created a set to not have duplications
 
     public List<SimpleGrantedAuthority> getAuthorities() {
         var authorities = getPermissions()
                 .stream()
-                .map(permissions -> new SimpleGrantedAuthority(permissions.name()))
-                .toList();
-        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+                .map(permissions -> new SimpleGrantedAuthority(permissions.getPermission()))
+                .collect (Collectors.toList());
+        authorities.add (new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
+
 }
